--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -19,10 +19,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.32ec01e0b8770f9d9cce.css"></head>
 
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="cordova.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.cec3fbfe7c35382cdf0b.js" type="module"></script><script src="runtime-es5.cec3fbfe7c35382cdf0b.js" nomodule defer></script><script src="polyfills-es5.8e93e783cffb0c0e0afc.js" nomodule defer></script><script src="polyfills-es2015.eba6c667c0f82f5051d0.js" type="module"></script><script src="cordova.a2fa906a490455e3109c.js" defer></script><script src="main-es2015.09334103512674586085.js" type="module"></script><script src="main-es5.09334103512674586085.js" nomodule defer></script></body>
 
 </html>
